--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
             "database"
         ],
         "psr-4": {
-            "coffee\\": "app/"
+            "Coffee\\": "app/"
         }
     },
     "autoload-dev": {
